[workspace]
members = ["model", "cli"]
resolver = "3"


[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hocg-fan-sim-assets-model = { path = "model", version = "*" }
hocg-fan-sim-assets-cli = { path = "cli", version = "*" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
clap = { version = "4.5.23", features = ["derive"] }
image = "0.25.2"
imageproc = "0.25.0"
webp = "0.3.0"
httpdate = "1.0.3"
rayon = "1.10.0"
walkdir = "2.5.0"
parking_lot = "0.12.3"
tempfile = "3.13.0"
zip = "2.4.1"
oxipng = "9.1.2"
scraper = "0.23.1"
indexmap = "2.6.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
itertools = "0.14.0"