[workspace]
members = ["model", "cli"]
resolver = "3"


[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hocg-fan-sim-assets-cli = { path = "cli", version = "*" }
hocg-fan-sim-assets-model = { path = "model", version = "*" }
clap = { version = "4.5.34", features = ["derive"] }
csv = "1.3.1"
dotenvy = "0.15.7"
httpdate = "1.0.3"
image = "0.25.6"
image_hasher = "3.0.0"
imageproc = "0.25.0"
indexmap = "2.6.0"
itertools = "0.14.0"
json-pretty-compact = "0.1.2"
oxipng = "9.1.2"
palette = "0.7.6"
parking_lot = "0.12.3"
rayon = "1.10.0"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20.0"
walkdir = "2.5.0"
webp = "0.3.0"
zip = "4.2.0"
