[workspace]
members = ["model", "cli"]
resolver = "3"


[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hocg-fan-sim-assets-cli = { path = "cli", version = "*" }
hocg-fan-sim-assets-model = { path = "model", version = "*" }
clap = { version = "4.5.57", features = ["derive"] }
dotenvy = "0.15.7"
httpdate = "1.0.3"
image = "0.25.9"
image_hasher = "3.1.0"
indexmap = "2.13.0"
itertools = "0.14.0"
json-pretty-compact = "0.1.2"
oxipng = "10.1.0"
palette = "0.7.6"
parking_lot = "0.12.5"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = [
    "blocking",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "query",
] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
walkdir = "2.5.0"
webp = "0.3.1"
zip = "7.4.0"
