[package]
name = "hocg-fan-sim-assets-cli"
edition.workspace = true
version.workspace = true

[dependencies]
hocg-fan-sim-assets-model = { workspace = true }

clap = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
httpdate = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
json-pretty-compact = { workspace = true }
oxipng = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
webp = { workspace = true }
zip = { workspace = true }