[package]
name = "hocg-fan-sim-assets-model"
edition.workspace = true
version.workspace = true

[dependencies]
image = { workspace = true }
image_hasher = { workspace = true }
itertools = { workspace = true }
palette = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
